--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>SchoolRobot Edge - AI-Powered Child Protection & School Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Favicon and PWA Assets -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
